Fix z-index CSS syntax

--- a/src/css/z-index.css
+++ b/src/css/z-index.css
@@ -5,28 +5,26 @@
 */
 
 /* Toolbox z-index: 40; set in scratch-blocks */
-$z-index-extension-button: 42;
-$z-index-stage-indicator: 45;
-$z-index-add-button: 46;
-$z-index-tooltip: 47; /* tooltips should go over add buttons if they overlap */
-$z-index-monitor: 48; /* monitors go over add buttons */
-$z-index-stage-question: 49; /* "ask" block text input goes above monitors */
+.z-index-extension-button { z-index: 42; }
+.z-index-stage-indicator { z-index: 45; }
+.z-index-add-button { z-index: 46; }
+.z-index-tooltip { z-index: 47; } /* tooltips should go over add buttons if they overlap */
+.z-index-monitor { z-index: 48; } /* monitors go over add buttons */
+.z-index-stage-question { z-index: 49; } /* "ask" block text input goes above monitors */
 
-$z-index-card: 480;
-$z-index-alerts: 490;
-$z-index-menu-bar: 491; /* menu-bar should go over monitors, alerts and tutorials */
-$z-index-loader: 500;
-$z-index-modal: 510;
+.z-index-card { z-index: 480; }
+.z-index-alerts { z-index: 490; }
+.z-index-menu-bar { z-index: 491; } /* menu-bar should go over monitors, alerts and tutorials */
+.z-index-loader { z-index: 500; }
+.z-index-modal { z-index: 510; }
 
-$z-index-drag-layer: 1000;
+.z-index-drag-layer { z-index: 1000; }
 /* Block drag z-index: 1000; default 50 is overriden in blocks.css */
-$z-index-monitor-dragging: 1010;
-$z-index-dragging-sprite: 1020; /* so it is draggable into other panes */
+.z-index-monitor-dragging { z-index: 1010; }
+.z-index-dragging-sprite { z-index: 1020; } /* so it is draggable into other panes */
 
-$z-index-stage-color-picker-background: 2000;
-$z-index-stage-with-color-picker: 2010;
-$z-index-stage-header: 5000;
-$z-index-stage-wrapper-overlay: 5000;
+.z-index-stage-color-picker-background { z-index: 2000; }
+.z-index-stage-with-color-picker { z-index: 2010; }
 
 /* in most interfaces, the context menu is always on top */
-$z-index-context-menu: 10000;
+.z-index-context-menu { z-index: 10000; }
